fix: adjusted side padding for offscreen metric

--- a/src/components/MetricsVisualizer/metrics-visualizer.css
+++ b/src/components/MetricsVisualizer/metrics-visualizer.css
@@ -15,7 +15,7 @@
  */
 
 .metrics-visualizer {
-  padding: 0 140px;
+  padding: 0 160px;
 }
 
 .metrics-visualizer-inside {
